--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>Thiệp Mời Cưới Hải - Như</title>
 </head>
 
-<!-- <script>
+<script>
   // ❌ Chặn F12
   document.addEventListener('keydown', function (event) {
     if (event.key === 'F12' ||
@@ -35,7 +35,7 @@
     event.preventDefault();
     alert('💌 Vui lòng không mở công cụ kiểm tra nhé 💕');
   });
-</script> -->
+</script>
 
 
 <body>
